# ChessGPT

./: .gitignore  README.md  data_ingestion.py  project_info_from_gpt.md  requirements.in  requirements.txt  run_rust_ingester_modal.py  train_grpo_modal.py  train_model.py  train_transformer_modal.py
chesshacks-bot/: requirements.txt
chesshacks-bot/src/: policy_engine.py
models/: chess_policy.pt  chess_policy_test.pt  move_mapping_hist0_full.json  move_mapping_hist0_games8k.json
rust-ingester/: Cargo.toml
rust-ingester/src/: main.rs
src/: main.py  policy_engine.py
