[package]
name = "rust-ingester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
indicatif = "0.17"
pgn-reader = "0.28"
num_cpus = "1.16"
